# Vnt2App

./: .gitignore  README.md  README_iOS.md  ROOM_FEATURE_REMOVAL_SUMMARY.md  build_android.sh  pubspec.yaml  vnt2_app-android-fixed.apk.idsig  vnt2_app-android.apk.idsig  vnt2_app.keystore
.github/workflows/: build.yml
android/: build.gradle
android/app/: build.gradle  proguard-rules.pro
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: connect_log.dart  data_persistence.dart  main.dart  system_tray_manager.dart
lib/chat/: chat_logger.dart  chat_manager.dart  chat_network_service.dart  chat_view.dart  room_lobby_view.dart
lib/pages/: about_page.dart  (+6 more)
linux/: CMakeLists.txt  build_linux_appimage.sh  my_application.cc
macos/: create_dmg.sh  安装说明.html
rust/: Cargo.toml  build.rs  cargokit.yaml
rust/.cargo/: config
rust/src/api/: vnt_api.rs
scripts/: build_windows.bat  build_windows_installer.ps1  build_windows_launcher.ps1  diagnose_portable_launch.ps1  diagnose_windows_release.ps1  windows_installer.iss
test/: chat_audio_service_test.dart  chat_ids_test.dart  chat_network_service_test.dart  chat_pcm_codec_test.dart  chat_peer_labels_test.dart  chat_room_refactor_test.dart  data_persistence_identity_test.dart  network_config_core_compat_test.dart  remote_assist_flow_test.dart  rustdesk_runtime_test.dart  window_close_behavior_test.dart  window_restore_guard_test.dart  windows_firewall_service_test.dart  windows_process_guard_test.dart
windows/: CMakeLists.txt
windows_launcher/: vnt2_app_launcher.c  vnt2_app_launcher.rc
(+29 files in other folders)
