[package]
name = "rust_lib_vnt_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[target.x86_64-pc-windows-msvc.build-dependencies]
thunk-rs = { version = "0.3.3", features = ["win7"] }

[target.i686-pc-windows-msvc.build-dependencies]
thunk-rs = { version = "0.3.3", features = ["win7"] }

[dependencies]

serde = { version = "1.0", features = ["derive"] }
flutter_rust_bridge = "=2.1.0"
vnt-core = { path = "../vendor/vnt-core-2.0.0" }
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
rust-p2p-core = "0.4"
ipnet = "2.11"
serde_json = "1.0"

log = "0.4.17"
log4rs = "=1.2.0"

